First test commit

--- a/vendor.conf
+++ b/vendor.conf
@@ -1,5 +1,7 @@
 # package
 github.com/rancher/kubecon2018
 
-github.com/Sirupsen/logrus        v0.10.0
+github.com/sirupsen/logrus        v0.10.0
 github.com/urfave/cli             v1.18.0
+
+k8s.io/client-go                              v5.0.0 transitive=true
