--- a/vendor.conf
+++ b/vendor.conf
@@ -7,3 +7,6 @@ github.com/urfave/cli             v1.18.0
 k8s.io/client-go                              v5.0.0 transitive=true
 k8s.io/kubernetes v1.8.3 transitive=true,staging=true
 bitbucket.org/ww/goautoneg a547fc61f48d567d5b4ec6f8aee5573d8efce11d https://github.com/rancher/goautoneg.git
+
+github.com/rancher/norman bde68141b66fc4607b224eebfd54555659926459
+golang.org/x/sync                             fd80eb99c8f653c847d294a001bdf2a3a6f768f5
